
[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "googletrans>=4.0.2",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=20.0",
    "requests>=2.32.3",
    "telegram>=0.0.1",
]
